5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1716_2507.log
== SUBMITION (2019-05-13 17:56:53) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0  qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.163953
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 5
    while (0  qi < 8000):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:56:54) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0  qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.164191
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 5
    while (0  qi < 8000):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:57:31) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.156199
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 12
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:57:32) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.159708
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 12
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:57:32) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- ERROR:
File "XXXX", line 12
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:57:33) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.217913
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 12
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:57:34) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.175121
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 12
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:57:34) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif:
		print("MAXIMO")
print(meses)		
-- ERROR:
File "XXXX", line 12
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:58:10) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif (qi>= 8000)
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.161953
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 12
    elif (qi>= 8000)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:58:11) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif (qi>= 8000)
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.138527
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 12
    elif (qi>= 8000)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:58:20) 
-- CODE:
qi = int(input("Quantidade inicial:"))
pc = int(input("Percentual de crescimento:"))

meses = 0
while (0 < qi < 8000):
	qprv = int(input("qpr:"))
	qi = qi + (qi * ( pc/100))
	qi = qi - qprv
	meses = meses + 1
	if(qi <= 0):
		print("ZERO")
	elif (qi >= 8000):
		print("MAXIMO")
print(meses)		
-- EXECUTION TIME:
0.142082
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
